re PR bootstrap/49797 (CLooG use of LANGUAGE_C conflicts with MIPS compilers)

PR bootstrap/49797
	* graphite-clast-to-gimple.c (CLOOG_LANGUAGE_C): Provide if missing.
	(set_cloog_options): Use it.

From-SVN: r176618